# AutoFit

./: .gitignore  .local_mandatory_preexec.md  AGENTS.md  DECISION.md  DESIGN.md  PLANS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUNBOOK.md  cursor_next_generation_ml_pipeline_impl.md  init_tree.txt  pyproject.toml  recovered_files.txt
.slurm_scripts/: af_e_ed.sh  af_e_on.sh  af_t_ed.sh  af_t_on.sh  afv3_e_ed.sh  afv3_e_on.sh  afv3_t_ed.sh  afv3_t_on.sh  generate_text_embeddings.sh  mlt_e_ed.sh  mlt_e_ed_resume.sh  mlt_e_on.sh  mlt_e_on_resume.sh  mlt_t_ed.sh  mlt_t_ed_resume.sh  mlt_t_on.sh  mlt_t_on_resume.sh
configs/: block3.yaml  block3_tasks.yaml  column_contract_v2.yaml  column_contract_v3.yaml  column_contract_wide.yaml  dataset.yaml  experiment.yaml
docs/: AGENTS.md  AUTOFIT_V71_SOTA_SCAN_20260215.md  AUTOFIT_V72_EVIDENCE_MASTER_20260217.md  BLOCK3_CHAMPION_COMPONENT_ANALYSIS.md  BLOCK3_EXECUTION_CONTRACT.md  BLOCK3_FULL_SOTA_BENCHMARK.md  BLOCK3_LIVE_SUMMARY.md  BLOCK3_MODEL_STATUS.md  BLOCK3_OPERATIONAL_SOP.md  BLOCK3_RESULTS.md  BLOCK3_RESULTS_phase0.md  BLOCK3_V72_ROOT_CAUSE_ANALYSIS.md  BLOCK3_V73_DEEP_DESIGN.md  BLOCK3_V73_RESEARCH_EXECUTION_SPEC_20260225.md  CLAUDE_MINIMAL_HANDOFF.md  CLAUDE_STARTUP_PROMPT.md  CURRENT_SOURCE_OF_TRUTH.md  DESIGN.md  ESSENTIAL_FILES.md  LEGACY_SCRIPT_SURFACES.md  MASTER_SUPPLEMENT_RESEARCH.md  MINIMAL_CURRENT_HANDOFF.md  PHASE12_TEXT_RERUN_EXECUTION.md  PHASE9_ULTIMATE_PLAN.md  PHASE9_V739_FACT_ALIGNMENT.md  PHASE9_V739_LESSONS_LEARNED.md  PLANS.md  PROGRESS_REPORT_20260205.md  PROJECT_HANDOFF_20260221.md  (+7 more)
(+3701 files in other folders)
