[project]
name = "autofit-ts-pipeline"
version = "0.1.0"
description = "Recovered minimal project metadata for reproducible audits."
readme = "QUICK_START.md"
requires-python = ">=3.9"
dependencies = ["deltalake", "duckdb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
